# tsauditor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/issue_template/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  clones.yml
examples/ogdc_leakage_case/: README.md  compare_leakage.py  leakage_comparison_results.csv  ogdc_with_regimes.csv
examples/sensor-example/: README.md  sensor_example.ipynb
examples/validation_comparison/: time_series_validation_vs_general_profiling.ipynb
tests/: conftest.py  test_contextual.py  test_correlation.py  test_equivalence.py  test_missing.py  test_point.py  test_profiler.py  test_remediation.py  test_scaffold.py  test_stationarity.py  test_temporal.py
tsauditor/: __init__.py  scanner.py
tsauditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tsauditor/anomaly/: __init__.py  contextual.py  point.py
tsauditor/leakage/: __init__.py  correlation.py  equivalence.py  temporal.py
tsauditor/profiler/: __init__.py  frequency.py  missing.py  stationarity.py
tsauditor/report/: __init__.py  summary.py
tsauditor/utils/: __init__.py  validation.py
