[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsauditor"
version = "0.1.0"
description = "A data quality auditing library for time-series tabular data in financial and sensor domains."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Iman", email = "iman@example.com" }]
requires-python = ">=3.9"
keywords = ["time-series", "data-quality", "leakage-detection", "finance", "sensor", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tsauditor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
