[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsauditor"
version = "0.1.0"
description = "A data quality auditing library for time-series tabular data in financial and sensor domains."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Iman", email = "iman@example.com" }]
requires-python = ">=3.9"
keywords = ["time-series", "data-quality", "leakage-detection", "finance", "sensor", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5,<3",
    "numpy>=1.23,<3",
    "scipy>=1.9,<2",
    "statsmodels>=0.13,<1",
    "rich>=13.0,<16",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tsauditor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["tsauditor"]
omit = [
    "tsauditor/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
